--- a/client/src/assets/styles/index.css
+++ b/client/src/assets/styles/index.css
@@ -534,10 +534,10 @@ li::has(a.active) {
 }
 
 .map-container {
-    background-color: white;
+    background-color: #33587a;
     text-align: center;
 }
 
 #world-map {
-    background-color: black;
+    background-color: whitesmoke;
 }
